--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -6,6 +6,7 @@ module:
   block: 0
   block_content: 0
   breakpoint: 0
+  category_head_validation: 0
   ckeditor5: 0
   comment: 0
   config: 0
@@ -13,9 +14,11 @@ module:
   contextual: 0
   datetime: 0
   dblog: 0
+  devel: 0
   dynamic_page_cache: 0
   editor: 0
   field: 0
+  field_permissions: 0
   field_ui: 0
   file: 0
   filter: 0
@@ -25,6 +28,7 @@ module:
   link: 0
   menu_link_content: 0
   menu_ui: 0
+  multiple_registration: 0
   mysql: 0
   node: 0
   options: 0
@@ -33,6 +37,7 @@ module:
   path_alias: 0
   search: 0
   shortcut: 0
+  smtp: 0
   system: 0
   taxonomy: 0
   text: 0
