--- a/config/sync/system.site.yml
+++ b/config/sync/system.site.yml
@@ -2,8 +2,8 @@ _core:
   default_config_hash: VDJxTZtQR21qB4lvOq8zszJZLvLKrSPQpdn2E3T71Ww
 langcode: en
 uuid: ff49f335-c57a-45c5-b8c2-0bc9dbe25bfb
-name: 'Drush Site-Install'
-mail: admin@example.com
+name: 'Inno News'
+mail: kalash.jain@innoraft.com
 slogan: ''
 page:
   403: ''
@@ -12,3 +12,4 @@ page:
 admin_compact_mode: false
 weight_select_max: 100
 default_langcode: en
+mail_notification: kalash.jain@innoraft.com
