--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -12,6 +12,7 @@ module:
   config: 0
   contact: 0
   contextual: 0
+  custom_cron: 0
   datetime: 0
   dblog: 0
   devel: 0
@@ -31,6 +32,7 @@ module:
   multiple_registration: 0
   mysql: 0
   node: 0
+  node_mail: 0
   options: 0
   page_cache: 0
   path: 0
